--- a/client_side/web-app/src/components/Navbar.css
+++ b/client_side/web-app/src/components/Navbar.css
@@ -55,9 +55,10 @@
         border-radius: 0 0 10px 10px;
         height: fit-content;
         overflow: hidden;
+        box-sizing: border-box;
     }
     .Navbar-title {
-        width: 100%;
+        width: 80%;
         padding: 0.5em;
         display: flex;
         align-content: center;
@@ -69,6 +70,7 @@
     }
     .nav-button {
         width: 100%;
+        box-shadow:inset 2px 0 35px 1px rgb(151, 74, 223);
     }
 
     .highlighted-link a {
@@ -78,6 +80,7 @@
     .Navbar .highlighted-link:hover {
         width: 100%;
         background-color: rgb(75, 0, 125);
+        box-shadow:inset 0 -4px 25px 1px rgb(195, 155, 233);
     }
     .nav-button:hover {
         color: aliceblue;
@@ -118,9 +121,9 @@
     .Navbar .burger {
         position: absolute;
         display: block;
-        top: 0;
+        top: 1em;
         bottom: auto;
-        right: 0;
+        right: 1em;
         cursor: pointer;
         background: unset;
         /* padding: 1em; */
